# datero

./: .env  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  README.rst  WHATSNEW.rst  pyproject.toml  requirements.old.txt  requirements.txt  seed  setup.cfg  setup.py  testtdb  update
datero/: __init__.py  __main__.py  datero  datero.ini
datero/actions/: processor.py
datero/commands/: __init__.py  doctor.py  list.py  seed.py  seed_manager.py
datero/helpers/: __init__.py
datero/helpers/dat/: redump.py  t_en.py
datero/helpers/repos/nointro/: update
datero/helpers/repos/redump/: update  update.sh
datero/helpers/repos/t_en/: fetch_dats.py
datero/repositories/: dat.py
lib/: __init__.py
lib/actions/: processor.py
lib/dat/: __init__.py  nointro.py  redump.py  t_en.py
lib/database/: __init__.py
lib/database/models/: __init__.py  datfile.py
lib/database/seeds/: dat_repos.py  dat_rules.py
lib/redump/: update
lib/repos/nointro/: download.py  fetch_dats.py  update
lib/repos/redump/: .env  __init__.py  fetch_dats.py
lib/repos/t_en/: fetch_dats.py  update
lib/repositories/: __init__.py  db.py  ia.py
lib/repositories/seeds/: dat_repos.py
lib/system/: __init__.py
src/datero/: __init__.py  __main__.py  datero.ini  seeds.txt  systems.json
src/datero/actions/: processor.py
src/datero/commands/: __init__.py  doctor.py  list.py  seed.py  seed_manager.py
src/datero/configuration/: __init__.py  configuration.py  logger.py
src/datero/database/: __init__.py
src/datero/database/models/: __init__.py  datfile.py
src/datero/database/seeds/: dat_repos.py  dat_rules.py  dat_rules.py.bak
src/datero/helpers/: __init__.py  executor.py
src/datero/repositories/: dat.py  dedupe.py  deduplicate.py
src/datero/seeds/: rules.py  unknown_seed.py
